<resources>
    <string name="app_name">BraniumAcadamy</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_require">Password request included:\n • Minimum 12 characters\n
        • Use uppercase and lowercase letters, numbers and special characters\n
        • Not based on your personal information\n
        • Password are unique for each account you have</string>
    <string name="hint_repeat_password">Confirm Password</string>
    <string name="text_question_acc">Already have an account?</string>
    <string name="text_login">Login</string>
    <string name="text_btn_register">Resister</string>
    <string name="text_login_name">Username</string>
    <string name="text_forget_password">Forgot Password?</string>
    <string name="text_register_now">Register Now</string>
    <string name="text_question_acc_have">Don\'t have an account?</string>
    <string name="text_enter_mail">Enter your email</string>
    <string name="text_send_code">Send Code</string>
    <string name="text_enter_code">Enter your code we send to ********@gmail.com</string>
    <string name="text_enter_code_content">We sen a 6-digit code to your email address. Enter that code to reset password</string>
    <string name="text_button_verify">Verify</string>
    <string name="text_enter_new_password" >Enter your new password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_new_password">Confirm New Password</string>
    <string name="text_button_reset_password">Reset Password</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_role">Role</string>
    <string name="txt_email">Email</string>
    <string name="txt_user_infor">User infor</string>
    <string name="txt_update_information">Update information</string>
    <string name="txt_change_password">Change password</string>
    <string name="txt_shopping_cart">Shopping cart</string>
    <string name="txt_information">Information</string>
    <string name="txt_update_your_information">Update your information</string>
    <string name="txt_address">Address</string>
    <string name="txt_day_of_birth">Day of birth</string>
    <string name="txt_mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_photo">Photo</string>
    <string name="txt_image_preview">Image preview</string>
    <string name="txt_update_new_image">Update new image</string>
</resources>