<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_information"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_update_your_information"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/hint_first_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_edt"
        android:hint="@string/hint_first_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/hint_last_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_edt"
        android:hint="@string/hint_last_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/txt_day_of_birth"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_day_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/bg_round_edt"
            android:padding="10dp"
            android:hint="@string/txt_mm_dd_yyyy"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:ignore="Autofill" />
        <ImageView
            android:id="@+id/iv_calendar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_calendar"
            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/txt_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_edt"
        android:hint="@string/txt_address"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/txt_save"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_round_btn"
            android:text="@string/txt_cancel"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>