<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="60dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_photo"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_update_your_information"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="10dp"
        android:text="@string/txt_image_preview"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <ImageView
        android:id="@+id/iv_profile_avatar"
        android:scaleType="fitXY"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:src="@drawable/exp_background_img"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription"
        />
        <include layout="@layout/blur_image_preview"/>
    </FrameLayout>

    <Button
        android:id="@+id/iv_update_avatar"
        android:layout_marginVertical="10dp"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:layout_height="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/txt_update_new_image"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_save"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/txt_save"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_round_btn"
            android:text="@string/txt_cancel"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>